2.30 "" (released xx.x.xxxx)

  * Fix attribute error in allowance check.
    Type: bugfix
    Changed: wc/proxy/Allowed.py

  * Fix case where connections were stalled in connect state forever.
    Type: bugfix
    Changed: wc/proxy/Dispatcher.py

2.29 "The Forgotten" (released 12.4.2005)

  * Replace template_dir in windows install script.
    Type: bugfix
    Changed: install-webcleaner.py

  * Do not include generated .html pages in source tarball.
    Type: bugfix
    Changed: doc/en/Makefile.am

2.28 "Shrek" (released 16.3.2005)

  * Initialize the ImageReducer attributes properly. Only change
    headers when filtering data, not earlier.
    Type: bugfix
    Changed: wc/filter/ImageReducer.py

  * Split off any superfluous MIME info when detecting MIME types.
    Type: bugfix
    Changed: wc/magic/__init__.py

  * Fix conffile name on windows installations
    Type: bugfix
    Closes: SF bug #1150918
    Changed: install-webcleaner.py

  * Close client connection on server connect() errors.
    Type: bugfix
    Changed: wc/proxy/HttpServer.py

2.27 "Aliens" (released 11.2.2005)

  * Add <nbr> to the list of known deprecated tags so it does not get
    corrected to <br> anymore.
    Type: feature
    Changed: wc/filter/HtmlTags.py

  * Mime type classification returns now a properly stripped mime type.
    Type: bugfix
    Changed: wc/magic/__init__.py

  * HTML parser updates:
    - supply and use Py_CLEAR macro
    - only call set_encoding function if tag name is 'meta'
    Type: feature
    Changed: wc/HtmlParser/*

  * Changed documentation format for epydoc.
    Type: documentation
    Changed: *.py

  * SSL certificates are now checked for expiration. Expired certificates
    are no longer accepted.
    Type: feature
    Changed: wc/proxy/ssl.py

  * The build script setup.py uses -std=gnu99 when using GNU gcc compilers.
    This gets rid of several compile warnings.
    Type: feature
    Changed: setup.py
