@@ -8,6 +8,10 @@
     Type: bugfix
     Changed: wc/proxy/Dispatcher.py
 
+  * Sanitize too large <img width/height> values.
+    Type: feature
+    Changed: wc/filter/HtmlSecurity.py
+
 2.29 "The Forgotten" (released 12.4.2005)
 
   * Replace template_dir in windows install script.
